--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+@import 'variables';
+@import '../node_modules/font-awesome/scss/font-awesome';
+
+// body, html {
+//   height: 100%;
+//   margin: 0;
+// }
+
+// .bg {
+//   /* The image used */
+//   background-image: url("assets/images/background.jpg");
+
+//   /* Full height */
+//   height: 100%; 
+
+//   /* Center and scale the image nicely */
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
+
+.bg {
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+}
+
+
+  .text-floral-white {
+    color: floralwhite!important;
+}
+
+.text-floral-black{
+  color: black!important;
+}
+
+.container {
+  margin: 20px;
+  display:flex;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: -650px;
+  left: 70px;
+  
+}
+
+.topCenter{
+  position: absolute;;
+  bottom: -120px;
+  left: 550px;
+}
+
+.center{
+  position: absolute;;
+  bottom: -550px;
+  left: 550px;
+}
+
+.container1 {
+  position: relative;
+}
